<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bstory_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    tools:context="io.marc.herome.Fragments.BackStoryFragment">


    <android.support.constraint.Guideline
        android:id="@+id/bstory_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/bstory_btnTopGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <android.support.constraint.Guideline
        android:id="@+id/bstory_botBtnGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88007057" />

    <android.support.constraint.Guideline
        android:id="@+id/bstory_leftBtnGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.083333336" />

    <android.support.constraint.Guideline
        android:id="@+id/bstory_rightBtnGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.921875" />

    <ImageView
        android:id="@+id/bstory_threadLines"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/lineoutlinepickapower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bstory_top"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/bstory_heroName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAllCaps="true"
        android:textColor="@color/ahero_yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bstory_btnTopGl"
        app:layout_constraintEnd_toStartOf="@+id/bstory_rightBtnGl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bstory_leftBtnGl"
        app:layout_constraintTop_toTopOf="@+id/bstory_threadLines" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/bigsupermanlogo"
        app:layout_constraintStart_toStartOf="@+id/bstory_leftBtnGl"
        app:layout_constraintTop_toTopOf="@+id/bstory_btnTopGl" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/aherome_backstory"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bstory_rightBtnGl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bstory_leftBtnGl"
        app:layout_constraintTop_toBottomOf="@+id/bstory_heroName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/bstory_rightBtnGl"
        app:layout_constraintStart_toStartOf="@+id/bstory_leftBtnGl"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:weightSum="8"
        app:layout_constraintBottom_toTopOf="@+id/bstory_botBtnGl"
        app:layout_constraintLeft_toRightOf="@+id/bstory_leftBtnGl"
        app:layout_constraintRight_toLeftOf="@+id/bstory_rightBtnGl"
        app:layout_constraintTop_toBottomOf="@+id/guideline2">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="TextView"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:text="@string/aherome_primarypower" />

        <Button
            android:id="@+id/bstory_primaryPwrBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/hero_button_transparent"
            android:drawableLeft="@drawable/supermancrest"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Button"
            android:textColor="@color/ahero_yellow"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/aherome_secondarypower"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bstory_secondPwrBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/hero_button_transparent"
            android:drawableLeft="@drawable/superstrength"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Button"
            android:textColor="@color/ahero_yellow"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/bstory_startOverBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hero_button_solid"
        android:backgroundTint="@color/ahero_yellow"
        android:text="@string/aherome_startover"
        android:textColor="@color/ahero_darkBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bstory_threadLines"
        app:layout_constraintEnd_toStartOf="@+id/bstory_rightBtnGl"
        app:layout_constraintStart_toStartOf="@+id/bstory_leftBtnGl"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</android.support.constraint.ConstraintLayout>
